add Export to excel

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -95,7 +95,7 @@
   <div class="row " id="tableDetail ">
 
     <div class="col-11 table-detail ">
-      <button type="button " class="btn btn-success btn-export ">
+      <button type="button " class="btn btn-success btn-export " (click)="exportDataToExcel()">
         <img src="./assets/img/icon-excel.JPG " style="width: 24px; "> EXPORT
       </button>
       <table class="fixed_headers ">
