Can Add Schedule

--- a/src/app/oncall-schedule/oncall-schedule.component.css
+++ b/src/app/oncall-schedule/oncall-schedule.component.css
@@ -191,3 +191,33 @@
         margin-top: 44px;
     }
 }
+
+
+:host /deep/ .hidden {
+    display: none;
+}
+
+:host /deep/ timepicker .form-group .form-control {
+    padding: 8px 0px;
+}
+
+.custom-control-input:checked~.custom-control-indicator {
+    color: #fff;
+    background-color: #6EC8D6;;
+}
+
+.custom-control-description {
+    padding-left: 10px;
+    font-size: 1rem;
+}
+
+.custom-checkbox .custom-control-indicator {
+    border-radius: 1rem;
+    width: 22px;
+    height: 22px;
+    margin-top: -2.5px;
+}
+
+.custom-control-input:focus~.custom-control-indicator {
+    box-shadow: none;
+}
